src/test/deca/syntax/invalid/SO/synt/twoSup.deca
// Description:
//    Programme pour vérifier les erreurs en cas de double <
//
// Resultats: extraneous input '<
//    
//
// Historique:
//    cree le 17/01/2022
{
    a<<b;
}